--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Professional Outcomes"
 APP_ENV=local
-APP_KEY=base64:dByIMQO6sy0STc7IKwBdTD0wCORgc9DVyfm70dzd0lk=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://profout.com
 
